# Shared_SIMD_Scan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.cpp  checkVectorizationSupport.cmake
Client/: ClientThread.cpp  ClientThread.hpp
Server/: ServerThread.cpp  ServerThread.hpp
Server/SIMD-Scan/: .gitlab-ci.yml  CMakeLists.txt  CMakeLists_bak.txt  Readme.md  User.txt
Server/SIMD-Scan/src/: SIMD_Scan.cpp  SIMD_util.cpp
Server/SIMD-Scan/test/: testSIMD.cpp
Table/: Table.cpp  Table.hpp
scripts/: callgrind_tools.py  decompression_algorithm.py  decompression_masks.py  decompression_masks8.py  decompression_parameters.py  plot_shared_scan_results.py  prepare_shared_scan_results.py
src/: benchmark.cpp  benchmark.hpp  benchmark_misc.cpp  main.cpp  profiling.cpp  profiling.hpp  simd_scan.cpp  simd_scan.hpp  simd_scan_commons.hpp  simd_scan_compression.cpp  simd_scan_decompression.cpp  simd_scan_shared.cpp  simd_scan_shared_linear.cpp  util.cpp  util.hpp
test/: simd_scan_tests.cpp  util_tests.cpp
utils/: Environment.cpp  Environment.hpp  Network.hpp  compression.h  concurrent_queue.hpp
